# homework11

.github/workflows/: workflow11.yaml
data/: inp1.txt  inp1_inline.txt  inp2.txt  inp3.txt  inp4.txt  inserts.txt  test1.sh  test2.sh  test3.sh  test4.sh  test_all.sh
src/: CMakeLists.txt  client_connection.cpp  client_connection.h  common_types.h  defaults.h  executor.cpp  executor.h  server_connection.cpp  server_connection.h  service.cpp  service.h  sql_client.cpp  sql_executor.cpp  sql_executor.h  sql_server.cpp  sqlite_wrap.cpp  sqlite_wrap.h
